Update Jinput